syntax = "proto3";

// Mall för meddelandet
message MessageObject{
	string alias = 1;
	string messageText = 2;
	int64 timestamp = 3;
}

// Svar från backend för meddelanden med lista
message GetMessagesResponse{
	repeated MessageObject messageList = 1;	
}

// Objekt för meddelande som ska läggas in i db
message InputMessage{
	string ipAddress = 1;
	MessageObject messageToInput = 2;
}

// Request send from client to backend
message BackendRequest{
	bool isInput = 1;
	InputMessage input = 2;
	int64 timestamp = 3;
}